# physician-candidate-matcher

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  feedback.py  match.py  router.py
backend/app/core/: eval.py  guardrails.py  observability.py  prompts.py  taxonomy.py
backend/app/db/repositories/: candidates.py  feedback.py  matches.py  metrics.py
backend/app/models/: candidate.py  feedback.py  job.py  match.py
backend/app/services/: claude.py  matcher.py  scorer.py
backend/app/utils/: exceptions.py  logging.py  tokens.py
backend/scripts/: seed_candidates.py
backend/tests/: conftest.py
backend/tests/evaluation/: golden_set.json  test_evaluation.py
backend/tests/unit/: test_edge_cases.py  test_matcher.py  test_scoring.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  SYSTEM-DESIGN.md  TESTING-GUIDE.md  schema.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/match/: page.tsx
frontend/src/components/: candidate-card.tsx  cost-chart.tsx  job-form.tsx  match-results.tsx  metrics-cards.tsx  providers.tsx
frontend/src/hooks/: use-analytics.ts  use-match.ts
frontend/src/lib/: api.ts  types.ts
