[project]
name = "physician-candidate-matcher"
version = "1.0.0"
description = "AI-powered physician candidate matching for healthcare recruiters"
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
disable_error_code = ["type-arg", "arg-type", "assignment"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
